--- a/views/events copy.ejs
+++ b/views/events copy.ejs
@@ -40,102 +40,159 @@
           <div class="first-tile_load">
             <!-- tabs-container-->
             <div id="tabs-container" class="fl-wrap">
-              <div class="tabs-counter">
+              <!-- <div class="tabs-counter">
                 <span>0</span>
                 <div class="tc_item">1</div>
-              </div>
+              </div> -->
               <ul class="tabs-menu fl-wrap">
                 <li class="selectedLava">
                   <a href="#tab-1" data-tabnum="1"><span>01.</span>Munsiko</a>
                 </li>
-                <!-- <li>
+                <li>
                     <a href="#tab-3" data-tabnum="3"
                       ><span>02.</span>teab 2</a
                     >
-                  </li> -->
+                  </li>
               </ul>
               <!-- tab-content-->
               <div id="tab-1" class="tab-content">
-                <!-- <h3 class="pr-subtitle">SHOW CASE</h3> -->
-                <!-- portfolio start -->
-                <div class="
-                      gallery-items
-                      min-pad
-                      lightgallery
-                     three-column
-                      fl-wrap
-                    ">
-                  <!-- gallery-item-->
-                  <div class="gallery-item ">
+                <div class="gallery-item">
+                  <div class="grid-item-holder">
+                    <a href="pics/DSC00657.jpg" class="
+                            fet_pr-carousel-box-media-zoom
+                            popup-image
+                          "><i class="fal fa-search"></i></a>
+                    <img src="pics/DSC00657.jpg" alt="" />
+                  </div>
+                </div>
+                <div class="gallery-item">
+                  <div class="grid-item-holder">
+                    <a href="pics/DSC00657.jpg" class="
+                            fet_pr-carousel-box-media-zoom
+                            popup-image
+                          "><i class="fal fa-search"></i></a>
+                    <img src="pics/DSC00657.jpg" alt="" />
+                  </div>
+                </div>
+                <div class="gallery-item">
+                  <div class="grid-item-holder">
+                    <a href="pics/DSC00657.jpg" class="
+                            fet_pr-carousel-box-media-zoom
+                            popup-image
+                          "><i class="fal fa-search"></i></a>
+                    <img src="pics/DSC00657.jpg" alt="" />
+                  </div>
+                </div>
+                <!-- gallery-item end-->
+                <!-- gallery-item-->
+                  <div class="fl-wrap">
+                    <div class="pr-bg pr-bg-white"></div>
+                    <div class="pr-title">
+                                                Project Details
+                                                <span
+                                                  >New collections on the Market reinventing our new
+                                                  trends of our fashion brand.
+                                                </span>
+                                              </div>
+                    <ul class="pr-list dark-bg">
+                      <li><span>Designer :</span> IGC Fashion</li>
+                      <li><span>Photography :</span> Papashootit</li>
+                      <li>
+                        <span>Model :</span> Ibrahim, Faith, Moreen, Sophie.
+                      </li>
+                      <li>
+                        <span>Google Map : </span>
+                        <a href="#" target="_blank">
+                          Ssebagala Road, Kisasi, Kampala.
+                        </a>
+                      </li>
+                    </ul>
+                    <div class="fixed-column-top">
+                      <i class="fal fa-long-arrow-up"></i>
+                    </div>
+                  </div>
+              </div>
+              <!-- gallery-item end-->
+                <div id="tab-3" class="tab-content">
+                  <div class="gallery-item">
                     <div class="grid-item-holder">
-                  <iframe width="100%" height="315" src="https://www.youtube.com/embed/uGGScubNrXA" title="YouTube video player"
-                    frameborder="0"
-                    allowfullscreen></iframe>
+                      <a href="pics/DSC00657.jpg" class="
+                                            fet_pr-carousel-box-media-zoom
+                                            popup-image
+                                          "><i class="fal fa-search"></i></a>
+                      <img src="pics/DSC00657.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="gallery-item">
+                    <div class="grid-item-holder">
+                      <a href="pics/DSC00657.jpg" class="
+                                            fet_pr-carousel-box-media-zoom
+                                            popup-image
+                                          "><i class="fal fa-search"></i></a>
+                      <img src="pics/DSC00657.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="gallery-item">
+                    <div class="grid-item-holder">
+                      <a href="pics/DSC00657.jpg" class="
+                                            fet_pr-carousel-box-media-zoom
+                                            popup-image
+                                          "><i class="fal fa-search"></i></a>
+                      <img src="pics/DSC00657.jpg" alt="" />
                     </div>
                   </div>
                   <!-- gallery-item end-->
                   <!-- gallery-item-->
-                  <div class="gallery-item">
-                    <div class="grid-item-holder">
-                      <iframe width="100%" height="315" src="https://www.youtube.com/embed/S4bqsuHVtEE" title="YouTube video player"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
+                  <div class="fl-wrap">
+                    <div class="pr-bg pr-bg-white"></div>
+                    <div class="pr-title">
+                      Project Details
+                      <span>New collections on the Market reinventing our new
+                        trends of our fashion brand.
+                      </span>
                     </div>
-                  </div>
-                  <!-- gallery-item end-->
-                  <!-- gallery-item-->
-                  <div class="gallery-item">
-                    <div class="grid-item-holder">
-                      <iframe width="100%" height="315" src="https://www.youtube.com/embed/GXRTqCP42jk" title="YouTube video player"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
-                    </div>
-                  </div>
-                  <div class="gallery-item">
-                    <div class="grid-item-holder">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/dZ-SdFxvo1Q" title="YouTube video player"
-                      frameborder="0"
-                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                      allowfullscreen></iframe>
-                    </div>
-                  </div>
-                  <div class="gallery-item">
-                    <div class="grid-item-holder">
-                      <iframe width="100%" height="315" src="https://www.youtube.com/embed/aZIe1C53OBE" title="YouTube video player"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
-                    </div>
-                  </div>
-                  <div class="gallery-item">
-                    <div class="grid-item-holder">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/NwvpEVZh2Qo" title="YouTube video player"
-                      frameborder="0"
-                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                      allowfullscreen></iframe>
+                    <ul class="pr-list dark-bg">
+                      <li><span>Designer :</span> IGC Fashion</li>
+                      <li><span>Photography :</span> Papashootit</li>
+                      <li>
+                        <span>Model :</span> Ibrahim, Faith, Moreen, Sophie.
+                      </li>
+                      <li>
+                        <span>Google Map : </span>
+                        <a href="#" target="_blank">
+                          Ssebagala Road, Kisasi, Kampala.
+                        </a>
+                      </li>
+                    </ul>
+                    <div class="fixed-column-top">
+                      <i class="fal fa-long-arrow-up"></i>
                     </div>
                   </div>
                 </div>
-                <!-- portfolio end -->
-                <h3 class="pr-subtitle mar-top"></h3>
-                <p></p>
-              </div>
-              <!-- tab-content end-->
             </div>
+            <!-- portfolio end -->
+            <h3 class="pr-subtitle mar-top"></h3>
+            <p></p>
+         
           </div>
+         
+
+          <!-- tab-content end-->
         </div>
+       
+
       </div>
-      <!-- det-wrap end-->
     </div>
-    <!-- container end -->
-    <div class="clearfix"></div>
-    <div class="limit-box fl-wrap"></div>
-    <div class="content-nav_holder fl-wrap first-tile_load">
-      <div class="container">
-        <div class="content-nav">
-          <!-- <ul>
+</div>
+<!-- det-wrap end-->
+</div>
+<!-- container end -->
+<div class="clearfix"></div>
+<div class="limit-box fl-wrap"></div>
+<div class="content-nav_holder fl-wrap first-tile_load">
+  <div class="container">
+    <div class="content-nav">
+      <!-- <ul>
               <li>
                 <a href="portfolio-single13.html"
                   ><i class="fal fa-long-arrow-left"></i
@@ -160,10 +217,10 @@
                 </div>
               </li>
             </ul> -->
-        </div>
-      </div>
     </div>
-  </section>
+  </div>
+</div>
+</section>
 </div>
 <div class="content"></div>
 <div class="content">
