--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,8 +5,7 @@
   <!-- option-panel-->
   <div class="option-panel bot-element">
     <a href="contacts.html" class="start-btn color-bg">
-      Get to know us <i class="fal fa-long-arrow-right"></i
-    ></a>
+      Get to know us <i class="fal fa-long-arrow-right"></i></a>
     <div class="swiper-counter">
       <div id="current">01</div>
       <div id="total"></div>
@@ -26,14 +25,13 @@
           <!-- swiper-slide-->
           <div class="swiper-slide">
             <div class="half-hero-wrap">
-              <div class="pr-bg"></div>
+              <!-- <div class="pr-bg">not really</div> -->
               <div class="rotate_text">CREATE.INSPIRE.SHARE</div>
               <h1>
                 IGC
                 <span>
                   <br />
-                  FASHION</span
-                >
+                  FASHION</span>
               </h1>
               <h4></h4>
               <div class="clearfix"></div>
@@ -67,11 +65,13 @@
             <div class="half-hero-wrap">
               <div class="rotate_text">CREATE.INSPIRE.SHARE</div>
               <h1>
-                <span>View<br /></span> Munsiko
+                <span>Munsiko<br /></span> 
+                collections
               </h1>
-              <h1>
-                <span>New<br /></span> collections
-              </h1>
+              <!-- <h1>
+                <span>New<br /></span>
+                collections
+              </h1> -->
 
               <!-- <a href="portfolio-single2.html" class="half-hero-wrap_link">View shop <i class="fal fa-long-arrow-right"></i></a>-->
             </div>
@@ -98,31 +98,27 @@
       <div class="swiper-wrapper">
         <!-- swiper-slide-->
         <div class="swiper-slide">
-          <div
-            class="bg"
-            data-bg="images/bg/widescope-slide-4.jpg"
-          ></div>
+          <!-- <div>
+          <div class="bg" data-bg="pics/DSC00440.jpg"></div>
+
+          </div> -->
+          <!-- <img src="pics/DSC00440" alt=""> -->
+          <div class="bg" data-bg="pics/DSC00440.jpg"></div>
         </div>
         <!-- swiper-slide end-->
         <!-- swiper-slide-->
         <div class="swiper-slide">
-          <div
-            class="bg"
-            data-bg="images/bg/widescope-slide-5.jpg"
-          ></div>
+          <div class="bg" data-bg="pics/DSC00440.jpg"></div>
         </div>
         <!-- swiper-slide end-->
         <!-- swiper-slide-->
         <div class="swiper-slide">
-          <div
-            class="bg"
-            data-bg="images/bg/widescope-slide-6.jpg"
-          ></div>
+          <div class="bg" data-bg="pics/DSC00440.jpg"></div>
         </div>
         <!-- swiper-slide end-->
         <!-- swiper-slide-->
         <div class="swiper-slide">
-          <div class="bg" data-bg="images/bg/bg.jpg"></div>
+          <div class="bg" data-bg="pics/DSC00440.jpg"></div>
         </div>
         <!-- swiper-slide end-->
         <!-- swiper-slide-->
