--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,6 @@
   <head>
     <!--=============== basic  ===============-->
     <meta charset="UTF-8" />
-    <title>IGC3 FASHION</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
@@ -11,11 +10,22 @@
     <meta name="robots" content="index, follow" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
+    <title>
+      <%= title %>
+    </title>
+
     <!--=============== css  ===============-->
     <link type="text/css" rel="stylesheet" href="css/reset.css" />
     <link type="text/css" rel="stylesheet" href="css/plugins.css" />
     <link type="text/css" rel="stylesheet" href="css/style.css" />
     <link type="text/css" rel="stylesheet" href="css/color.css" />
+    <link href="/css/font-awesome.css" rel="stylesheet"
+      type='text/css'>
+    <!-- <link rel="stylesheet" rel="stylesheet" href="css/fontawesome.min.css" /> -->
+    <!-- <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css"
+  rel="stylesheet"
+/> -->
     <!--=============== favicons ===============-->
     <link rel="shortcut icon" href="images/favicon.png" />
   </head>
@@ -53,7 +63,7 @@
             </li>
             <li>
               <span> Write </span>
-              <a href="mailto:info@igcfashion.com">To Us</a>
+              <a href="contacts">To Us</a>
             </li>
           </ul>
         </div>
@@ -99,7 +109,7 @@
                   <li></li>
                   <li><a href="collections" class="act-link">Collections</a></li>
                   <li></li>
-                  <li><a href="contacts" class="act-link">Contacts</a></li>
+                  <li><a href="contacts" class="act-link">Contact Us</a></li>
                 </ul>
               </nav>
               <!-- nav end-->
@@ -112,8 +122,8 @@
               <span class="nav-social_title">Follow us : </span>
               <ul>
                 <li>
-                  <a href="https://www.facebook.com/IGCfashion " target="_blank"
-                    ><i class="fab fa-facebook-f"></i
+                  <a href="https://www.facebook.com/IGCfashion" target="_blank"
+                    ><i class="fab fa-facebook"></i
                   ></a>
                 </li>
                 <li>
@@ -125,7 +135,7 @@
                 </li>
                 <li>
                   <a
-                    href="https://www.pinterest.com/igcfashion/_saved/"
+                    href="https://www.pinterest.com/igcfashion"
                     target="_blank"
                     ><i class="fab fa-pinterest"></i
                   ></a>
