--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@
 	++ Blog++
 	++ Responsive ++
 /*-------------Fonts---------------------------------------*/
-@import url("https://fonts.googleapis.com/css?family=Mukta:300,400,500,600,700,800|Oswald:200,300,400,500,600,700|Roboto:400,500,700,900&subset=cyrillic,cyrillic-ext,devanagari,greek,greek-ext,latin-ext,vietnamese");
+@import url("http://localhost:3000/fonts/fonts.css");
 /*-------------General Style---------------------------------------*/
 
 html {
@@ -306,6 +306,15 @@ blockquote p {
   background-repeat: repeat;
   background-origin: content-box;
 }
+.bgimg{
+      background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.2)), url("pics/DSC00440");
+    /* background-image: url(../Image/bg.jpg); */
+    width: 100%;
+    height: auto;
+    background-repeat: no-repeat !important;
+    z-index: 77;
+}
+
 .overlay {
   position: absolute;
   top: 0;
@@ -542,7 +551,7 @@ header.main-header:before {
   letter-spacing: 4px;
 }
 .header-contacts li:before {
-  content: "";
+  /* content: ""; */
   position: absolute;
   left: -30px;
   width: 15px;
@@ -2543,6 +2552,23 @@ section.hero-section .fs-canvas {
   height: auto;
   position: relative;
   overflow: hidden;
+
+   display:inline-block;
+  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+
+}
+
+.grid-item-holder img{
+   position:relative;
+  z-index:-1;
+  display:block;
+  height:200px; width:auto;
 }
 .spad .gallery-item {
   padding: 6px;
@@ -2558,9 +2584,9 @@ section.hero-section .fs-canvas {
 }
 .gallery-item,
 .grid-sizer {
-  width: 66.6%;
   /* width: 33.3%; */
-  /* position: relative; */
+  width:50%;
+  position: relative;
   float: left;
   overflow: hidden;
 }
@@ -2574,6 +2600,9 @@ section.hero-section .fs-canvas {
 .four-column .gallery-item.gallery-item-second,
 .two-column .gallery-item {
   width: 50%;
+}
+.three-column .gallery-item {
+  width: 33.33%;
 }
 .gallery-item img,
 .grid-sizer img {
@@ -3298,8 +3327,10 @@ section.hero-section .fs-canvas {
   z-index: 1;
   font-size: 94px;
   font-weight: bold;
-  color: #eee;
-  opacity: 0.7;
+  color:#f76905;
+  /* color: #eee; */
+
+  /* opacity: 0.7;   */
   font-family: "Oswald", sans-serif;
 }
 .tabs-counter div,
@@ -3311,13 +3342,13 @@ section.hero-section .fs-canvas {
   width: 30px;
 }
 .tabs-counter:before {
-  content: ".";
+  /* content: "."; */
   position: absolute;
   right: -50px;
   bottom: 0;
 }
 .tabs-counter span:before {
-  content: "";
+  /* content: ""; */
   position: absolute;
   width: 100%;
   bottom: 50%;
@@ -3331,7 +3362,7 @@ section.hero-section .fs-canvas {
   margin-bottom: 30px;
 }
 .tabs-menu:before {
-  content: "";
+
   position: absolute;
   bottom: 4px;
   left: 0;
